ANTLR4/ANTLR4Parser.py
# Generated from ANTLR4Parser.g4 by ANTLR 4.5.1
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO



class ANTLR4Parser ( Parser ):

    grammarFileName = "ANTLR4Parser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"'options'", u"'tokens'", u"'channels'", u"'import'", 
                     u"'fragment'", u"'lexer'", u"'parser'", u"'grammar'", 
                     u"'protected'", u"'public'", u"'private'", u"'returns'", 
                     u"'locals'", u"'throws'", u"'catch'", u"'finally'", 
                     u"'mode'" ]

    symbolicNames = [ u"<INVALID>", u"TOKEN_REF", u"RULE_REF", u"LEXER_CHAR_SET", 
                      u"DOC_COMMENT", u"BLOCK_COMMENT", u"LINE_COMMENT", 
                      u"INT", u"STRING_LITERAL", u"UNTERMINATED_STRING_LITERAL", 
                      u"BEGIN_ARGUMENT", u"BEGIN_ACTION", u"OPTIONS", u"TOKENS", 
                      u"CHANNELS", u"IMPORT", u"FRAGMENT", u"LEXER", u"PARSER", 
                      u"GRAMMAR", u"PROTECTED", u"PUBLIC", u"PRIVATE", u"RETURNS", 
                      u"LOCALS", u"THROWS", u"CATCH", u"FINALLY", u"MODE", 
                      u"COLON", u"COLONCOLON", u"COMMA", u"SEMI", u"LPAREN", 
                      u"RPAREN", u"LBRACE", u"RBRACE", u"RARROW", u"LT", 
                      u"GT", u"ASSIGN", u"QUESTION", u"STAR", u"PLUS_ASSIGN", 
                      u"PLUS", u"OR", u"DOLLAR", u"RANGE", u"DOT", u"AT", 
                      u"POUND", u"NOT", u"ID", u"WS", u"ERRCHAR", u"END_ARGUMENT", 
                      u"UNTERMINATED_ARGUMENT", u"ARGUMENT_CONTENT", u"END_ACTION", 
                      u"UNTERMINATED_ACTION", u"ACTION_CONTENT", u"UNTERMINATED_CHAR_SET" ]

    RULE_grammarSpec = 0
    RULE_grammarDecl = 1
    RULE_grammarType = 2
    RULE_prequelConstruct = 3
    RULE_optionsSpec = 4
    RULE_option = 5
    RULE_optionValue = 6
    RULE_delegateGrammars = 7
    RULE_delegateGrammar = 8
    RULE_tokensSpec = 9
    RULE_channelsSpec = 10
    RULE_idList = 11
    RULE_action_ = 12
    RULE_actionScopeName = 13
    RULE_actionBlock = 14
    RULE_argActionBlock = 15
    RULE_modeSpec = 16
    RULE_rules = 17
    RULE_ruleSpec = 18
    RULE_parserRuleSpec = 19
    RULE_exceptionGroup = 20
    RULE_exceptionHandler = 21
    RULE_finallyClause = 22
    RULE_rulePrequel = 23
    RULE_ruleReturns = 24
    RULE_throwsSpec = 25
    RULE_localsSpec = 26
    RULE_ruleAction = 27
    RULE_ruleModifiers = 28
    RULE_ruleModifier = 29
    RULE_ruleBlock = 30
    RULE_ruleAltList = 31
    RULE_labeledAlt = 32
    RULE_lexerRuleSpec = 33
    RULE_lexerRuleBlock = 34
    RULE_lexerAltList = 35
    RULE_lexerAlt = 36
    RULE_lexerElements = 37
    RULE_lexerElement = 38
    RULE_labeledLexerElement = 39
    RULE_lexerBlock = 40
    RULE_lexerCommands = 41
    RULE_lexerCommand = 42
    RULE_lexerCommandName = 43
    RULE_lexerCommandExpr = 44
    RULE_altList = 45
    RULE_alternative = 46
    RULE_element = 47
    RULE_labeledElement = 48
    RULE_ebnf = 49
    RULE_blockSuffix = 50
    RULE_ebnfSuffix = 51
    RULE_lexerAtom = 52
    RULE_atom = 53
    RULE_notSet = 54
    RULE_blockSet = 55
    RULE_setElement = 56
    RULE_block = 57
    RULE_ruleref = 58
    RULE_characterRange = 59
    RULE_terminal = 60
    RULE_elementOptions = 61
    RULE_elementOption = 62
    RULE_identifier = 63

    ruleNames =  [ u"grammarSpec", u"grammarDecl", u"grammarType", u"prequelConstruct", 
                   u"optionsSpec", u"option", u"optionValue", u"delegateGrammars", 
                   u"delegateGrammar", u"tokensSpec", u"channelsSpec", u"idList", 
                   u"action_", u"actionScopeName", u"actionBlock", u"argActionBlock", 
                   u"modeSpec", u"rules", u"ruleSpec", u"parserRuleSpec", 
                   u"exceptionGroup", u"exceptionHandler", u"finallyClause", 
                   u"rulePrequel", u"ruleReturns", u"throwsSpec", u"localsSpec", 
                   u"ruleAction", u"ruleModifiers", u"ruleModifier", u"ruleBlock", 
                   u"ruleAltList", u"labeledAlt", u"lexerRuleSpec", u"lexerRuleBlock", 
                   u"lexerAltList", u"lexerAlt", u"lexerElements", u"lexerElement", 
                   u"labeledLexerElement", u"lexerBlock", u"lexerCommands", 
                   u"lexerCommand", u"lexerCommandName", u"lexerCommandExpr", 
                   u"altList", u"alternative", u"element", u"labeledElement", 
                   u"ebnf", u"blockSuffix", u"ebnfSuffix", u"lexerAtom", 
                   u"atom", u"notSet", u"blockSet", u"setElement", u"block", 
                   u"ruleref", u"characterRange", u"terminal", u"elementOptions", 
                   u"elementOption", u"identifier" ]

    EOF = Token.EOF
    TOKEN_REF=1
    RULE_REF=2
    LEXER_CHAR_SET=3
    DOC_COMMENT=4
    BLOCK_COMMENT=5
    LINE_COMMENT=6
    INT=7
    STRING_LITERAL=8
    UNTERMINATED_STRING_LITERAL=9
    BEGIN_ARGUMENT=10
    BEGIN_ACTION=11
    OPTIONS=12
    TOKENS=13
    CHANNELS=14
    IMPORT=15
    FRAGMENT=16
    LEXER=17
    PARSER=18
    GRAMMAR=19
    PROTECTED=20
    PUBLIC=21
    PRIVATE=22
    RETURNS=23
    LOCALS=24
    THROWS=25
    CATCH=26
    FINALLY=27
    MODE=28
    COLON=29
    COLONCOLON=30
    COMMA=31
    SEMI=32
    LPAREN=33
    RPAREN=34
    LBRACE=35
    RBRACE=36
    RARROW=37
    LT=38
    GT=39
    ASSIGN=40
    QUESTION=41
    STAR=42
    PLUS_ASSIGN=43
    PLUS=44
    OR=45
    DOLLAR=46
    RANGE=47
    DOT=48
    AT=49
    POUND=50
    NOT=51
    ID=52
    WS=53
    ERRCHAR=54
    END_ARGUMENT=55
    UNTERMINATED_ARGUMENT=56
    ARGUMENT_CONTENT=57
    END_ACTION=58
    UNTERMINATED_ACTION=59
    ACTION_CONTENT=60
    UNTERMINATED_CHAR_SET=61

    def __init__(self, input):
        super(ANTLR4Parser, self).__init__(input)
        self.checkVersion("4.5.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class GrammarSpecContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ANTLR4Parser.GrammarSpecContext, self).__init__(parent, invokingState)
            self.parser = parser

        def grammarDecl(self):
            return self.getTypedRuleContext(ANTLR4Parser.GrammarDeclContext,0)


        def rules(self):
            return self.getTypedRuleContext(ANTLR4Parser.RulesContext,0)


        def EOF(self):
            return self.getToken(ANTLR4Parser.EOF, 0)

        def DOC_COMMENT(self, i=None):
            if i is None:
                return self.getTokens(ANTLR4Parser.DOC_COMMENT)
            else:
                return self.getToken(ANTLR4Parser.DOC_COMMENT, i)

        def prequelConstruct(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ANTLR4Parser.PrequelConstructContext)
            else:
                return self.getTypedRuleContext(ANTLR4Parser.PrequelConstructContext,i)


        def modeSpec(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ANTLR4Parser.ModeSpecContext)
            else:
                return self.getTypedRuleContext(ANTLR4Parser.ModeSpecContext,i)


        def getRuleIndex(self):
            return ANTLR4Parser.RULE_grammarSpec

        def enterRule(self, listener):
            if hasattr(listener, "enterGrammarSpec"):
                listener.enterGrammarSpec(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitGrammarSpec"):
                listener.exitGrammarSpec(self)




    def grammarSpec(self):

        localctx = ANTLR4Parser.GrammarSpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_grammarSpec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ANTLR4Parser.DOC_COMMENT:
                self.state = 128
                self.match(ANTLR4Parser.DOC_COMMENT)
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 134
            self.grammarDecl()
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ANTLR4Parser.OPTIONS) | (1 << ANTLR4Parser.TOKENS) | (1 << ANTLR4Parser.CHANNELS) | (1 << ANTLR4Parser.IMPORT) | (1 << ANTLR4Parser.AT))) != 0):
                self.state = 135
                self.prequelConstruct()
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 141
            self.rules()
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ANTLR4Parser.MODE:
                self.state = 142
                self.modeSpec()
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 148
            self.match(ANTLR4Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class GrammarDeclContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ANTLR4Parser.GrammarDeclContext, self).__init__(parent, invokingState)
            self.parser = parser

        def grammarType(self):
            return self.getTypedRuleContext(ANTLR4Parser.GrammarTypeContext,0)


        def identifier(self):
            return self.getTypedRuleContext(ANTLR4Parser.IdentifierContext,0)


        def SEMI(self):
            return self.getToken(ANTLR4Parser.SEMI, 0)

        def getRuleIndex(self):
            return ANTLR4Parser.RULE_grammarDecl

        def enterRule(self, listener):
            if hasattr(listener, "enterGrammarDecl"):
                listener.enterGrammarDecl(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitGrammarDecl"):
                listener.exitGrammarDecl(self)




    def grammarDecl(self):

        localctx = ANTLR4Parser.GrammarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_grammarDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.grammarType()
            self.state = 151
            self.identifier()
            self.state = 152
            self.match(ANTLR4Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class GrammarTypeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ANTLR4Parser.GrammarTypeContext, self).__init__(parent, invokingState)
            self.parser = parser

        def LEXER(self):
            return self.getToken(ANTLR4Parser.LEXER, 0)

        def GRAMMAR(self):
            return self.getToken(ANTLR4Parser.GRAMMAR, 0)

        def PARSER(self):
            return self.getToken(ANTLR4Parser.PARSER, 0)

        def getRuleIndex(self):
            return ANTLR4Parser.RULE_grammarType

        def enterRule(self, listener):
            if hasattr(listener, "enterGrammarType"):
                listener.enterGrammarType(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitGrammarType"):
                listener.exitGrammarType(self)




    def grammarType(self):

        localctx = ANTLR4Parser.GrammarTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_grammarType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            token = self._input.LA(1)
            if token in [ANTLR4Parser.LEXER]:
                self.state = 154
                self.match(ANTLR4Parser.LEXER)
                self.state = 155
                self.match(ANTLR4Parser.GRAMMAR)

            elif token in [ANTLR4Parser.PARSER]:
                self.state = 156
                self.match(ANTLR4Parser.PARSER)
                self.state = 157
                self.match(ANTLR4Parser.GRAMMAR)

            elif token in [ANTLR4Parser.GRAMMAR]:
                self.state = 158
                self.match(ANTLR4Parser.GRAMMAR)

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PrequelConstructContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ANTLR4Parser.PrequelConstructContext, self).__init__(parent, invokingState)
            self.parser = parser

        def optionsSpec(self):
            return self.getTypedRuleContext(ANTLR4Parser.OptionsSpecContext,0)


        def delegateGrammars(self):
            return self.getTypedRuleContext(ANTLR4Parser.DelegateGrammarsContext,0)


        def tokensSpec(self):
            return self.getTypedRuleContext(ANTLR4Parser.TokensSpecContext,0)


        def channelsSpec(self):
            return self.getTypedRuleContext(ANTLR4Parser.ChannelsSpecContext,0)


        def action_(self):
            return self.getTypedRuleContext(ANTLR4Parser.Action_Context,0)


        def getRuleIndex(self):
            return ANTLR4Parser.RULE_prequelConstruct

        def enterRule(self, listener):
            if hasattr(listener, "enterPrequelConstruct"):
                listener.enterPrequelConstruct(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitPrequelConstruct"):
                listener.exitPrequelConstruct(self)




    def prequelConstruct(self):

        localctx = ANTLR4Parser.PrequelConstructContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_prequelConstruct)
        try:
            self.state = 166
            token = self._input.LA(1)
            if token in [ANTLR4Parser.OPTIONS]:
                self.enterOuterAlt(localctx, 1)
                self.state = 161
                self.optionsSpec()

            elif token in [ANTLR4Parser.IMPORT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 162
                self.delegateGrammars()

            elif token in [ANTLR4Parser.TOKENS]:
                self.enterOuterAlt(localctx, 3)
                self.state = 163
                self.tokensSpec()

            elif token in [ANTLR4Parser.CHANNELS]:
                self.enterOuterAlt(localctx, 4)
                self.state = 164
                self.channelsSpec()

            elif token in [ANTLR4Parser.AT]:
                self.enterOuterAlt(localctx, 5)
                self.state = 165
                self.action_()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OptionsSpecContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ANTLR4Parser.OptionsSpecContext, self).__init__(parent, invokingState)
            self.parser = parser

        def OPTIONS(self):
            return self.getToken(ANTLR4Parser.OPTIONS, 0)

        def LBRACE(self):
            return self.getToken(ANTLR4Parser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(ANTLR4Parser.RBRACE, 0)

        def option(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ANTLR4Parser.OptionContext)
            else:
                return self.getTypedRuleContext(ANTLR4Parser.OptionContext,i)


        def SEMI(self, i=None):
            if i is None:
                return self.getTokens(ANTLR4Parser.SEMI)
            else:
                return self.getToken(ANTLR4Parser.SEMI, i)

        def getRuleIndex(self):
            return ANTLR4Parser.RULE_optionsSpec

        def enterRule(self, listener):
            if hasattr(listener, "enterOptionsSpec"):
                listener.enterOptionsSpec(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitOptionsSpec"):
                listener.exitOptionsSpec(self)




    def optionsSpec(self):

        localctx = ANTLR4Parser.OptionsSpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_optionsSpec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(ANTLR4Parser.OPTIONS)
            self.state = 169
            self.match(ANTLR4Parser.LBRACE)
            self.state = 175
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ANTLR4Parser.TOKEN_REF or _la==ANTLR4Parser.RULE_REF:
                self.state = 170
                self.option()
                self.state = 171
                self.match(ANTLR4Parser.SEMI)
                self.state = 177
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 178
            self.match(ANTLR4Parser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OptionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ANTLR4Parser.OptionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(ANTLR4Parser.IdentifierContext,0)


        def ASSIGN(self):
            return self.getToken(ANTLR4Parser.ASSIGN, 0)

        def optionValue(self):
            return self.getTypedRuleContext(ANTLR4Parser.OptionValueContext,0)


        def getRuleIndex(self):
            return ANTLR4Parser.RULE_option

        def enterRule(self, listener):
            if hasattr(listener, "enterOption"):
                listener.enterOption(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitOption"):
                listener.exitOption(self)




    def option(self):

        localctx = ANTLR4Parser.OptionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_option)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self.identifier()
            self.state = 181
            self.match(ANTLR4Parser.ASSIGN)
            self.state = 182
            self.optionValue()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OptionValueContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ANTLR4Parser.OptionValueContext, self).__init__(parent, invokingState)
            self.parser = parser

        def identifier(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ANTLR4Parser.IdentifierContext)
            else:
                return self.getTypedRuleContext(ANTLR4Parser.IdentifierContext,i)


        def DOT(self, i=None):
            if i is None:
                return self.getTokens(ANTLR4Parser.DOT)
            else:
                return self.getToken(ANTLR4Parser.DOT, i)

        def STRING_LITERAL(self):
            return self.getToken(ANTLR4Parser.STRING_LITERAL, 0)

        def actionBlock(self):
            return self.getTypedRuleContext(ANTLR4Parser.ActionBlockContext,0)


        def INT(self):
            return self.getToken(ANTLR4Parser.INT, 0)

        def getRuleIndex(self):
            return ANTLR4Parser.RULE_optionValue

        def enterRule(self, listener):
            if hasattr(listener, "enterOptionValue"):
                listener.enterOptionValue(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitOptionValue"):
                listener.exitOptionValue(self)




    def optionValue(self):

        localctx = ANTLR4Parser.OptionValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_optionValue)
        self._la = 0 # Token type
        try:
            self.state = 195
            token = self._input.LA(1)
            if token in [ANTLR4Parser.TOKEN_REF, ANTLR4Parser.RULE_REF]:
                self.enterOuterAlt(localctx, 1)
                self.state = 184
                self.identifier()
                self.state = 189
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==ANTLR4Parser.DOT:
                    self.state = 185
                    self.match(ANTLR4Parser.DOT)
                    self.state = 186
                    self.identifier()
                    self.state = 191
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)


            elif token in [ANTLR4Parser.STRING_LITERAL]:
                self.enterOuterAlt(localctx, 2)
                self.state = 192
                self.match(ANTLR4Parser.STRING_LITERAL)

            elif token in [ANTLR4Parser.BEGIN_ACTION]:
                self.enterOuterAlt(localctx, 3)
                self.state = 193
                self.actionBlock()

            elif token in [ANTLR4Parser.INT]:
                self.enterOuterAlt(localctx, 4)
                self.state = 194
                self.match(ANTLR4Parser.INT)

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DelegateGrammarsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ANTLR4Parser.DelegateGrammarsContext, self).__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(ANTLR4Parser.IMPORT, 0)

        def delegateGrammar(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(ANTLR4Parser.DelegateGrammarContext)
            else:
                return self.getTypedRuleContext(ANTLR4Parser.DelegateGrammarContext,i)


        def SEMI(self):
            return self.getToken(ANTLR4Parser.SEMI, 0)

        def COMMA(self, i=None):
            if i is None:
                return self.getTokens(ANTLR4Parser.COMMA)
            else:
                return self.getToken(ANTLR4Parser.COMMA, i)

        def getRuleIndex(self):
            return ANTLR4Parser.RULE_delegateGrammars

        def enterRule(self, listener):
            if hasattr(listener, "enterDelegateGrammars"):
                listener.enterDelegateGrammars(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitDelegateGrammars"):
                listener.exitDelegateGrammars(self)




    def delegateGrammars(self):

        localctx = ANTLR4Parser.DelegateGrammarsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_delegateGrammars)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 197
            self.match(ANTLR4Parser.IMPORT)
            self.state = 198
            self.delegateGrammar()
            self.state = 203
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ANTLR4Parser.COMMA:
                self.state = 199
                self.match(ANTLR4Parser.COMMA)
                self.state = 200
                self.delegateGrammar()
                self.state = 205
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 206
            self.match(ANTLR4Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DelegateGrammarContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(ANTLR4Parser.DelegateGrammarContext, self).__init__(parent, invokingState)
            self.parser = parser
